# hardzip

./: .gitignore  Cargo.toml  LICENSE  README.md  build.rs
installer/: hardzip_setup.iss  license.txt
src/: cli.rs  main.rs
src/algorithms/: brotli_alg.rs  lz4_alg.rs  lzma_alg.rs  mod.rs  zstd_alg.rs
src/core/: archive.rs  chunk.rs  compressor.rs  crypto.rs  foreign.rs  format.rs  mod.rs
src/gui/: app.rs  i18n.rs  mod.rs  panels.rs  theme.rs
src/utils/: fs.rs  progress.rs
