[package]
name = "hardzip"
version = "0.2.0"
edition = "2021"
authors = ["Łukasz Dziubiński <lukasz@ydi.pl>"]
description = "HardZIP - Harder, Better, Faster, Stronger compression"
license = "Proprietary"

[features]
default = ["gui"]
gui = ["eframe", "egui", "rfd"]
cli-only = []

[dependencies]
# CLI
clap = { version = "4.5", features = ["derive"] }

# GUI
eframe = { version = "0.28", optional = true }
egui = { version = "0.28", optional = true }
rfd = { version = "0.14", optional = true }

# Compression algorithms
zstd = "0.13"
lz4_flex = "0.11"
brotli = "6.0"
lzma-rs = "0.3"

# Foreign archive formats (ZIP, tar, gzip, bz2, xz, 7z)
zip = "2.1"
tar = "0.4"
flate2 = "1.0"
bzip2 = "0.5"
xz2 = "0.1"
sevenz-rust = "0.6"

# Encryption
aes-gcm = "0.10"
argon2 = "0.5"
rand = "0.8"

# Parallelism
rayon = "1.10"

# Integrity / Hashing
crc32fast = "1.4"
xxhash-rust = { version = "0.8", features = ["xxh3"] }

# Utilities
byteorder = "1.5"
image = { version = "0.25", default-features = false, features = ["ico", "png"] }
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
indicatif = "0.17"
walkdir = "2.5"
chrono = "0.4"
anyhow = "1.0"
log = "0.4"
env_logger = "0.11"

[build-dependencies]
winresource = "0.1"

[profile.release]
opt-level = 3
lto = true
codegen-units = 1
strip = true
